ページタイトル変更

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>PG-GUND</title>
+  <title>PG-GUND Portfolio</title>
 </head>
 
 <body>
